# celery-resource-autoscaler

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
celery_resource_autoscaler/: __init__.py  autoscaler.py
celery_resource_autoscaler/limits/: cpu_limit.py  memory_limit.py
tests/: test_autoscale.py
