[metadata]
name = 'celery-resource-autoscaler'
version = '0.0.1'
description = 'Celery plugin to autoscale based on available CPU, memory, or other system attributes.'
author = 'Jack Cushman'
author_email = 'jcushman@law.harvard.edu'
license = 'MIT'
url = 'https://github.com/jcushman/celery-resource-autoscaler'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']
